--- a/edgelist_feature_extract.ipynb
+++ b/edgelist_feature_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_files(y_train_path: Path, edgelist_path: Path, output_csv_path: Path) -> pd.DataFrame:\n",
+    "def process_edgelist_data(y_train_path: Path, edgelist_path: Path, output_csv_path: Path) -> pd.DataFrame:\n",
     "\n",
     "    '''\n",
     "    This function gets as input the paths of the required files and the required name from the csv file output.\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4       0.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
     "edgelist_path = data_directory / edgelist_file\n",
     "output_csv_path =  \"features_edgelist.csv\"\n",
     "\n",
-    "df = process_data_files(y_train_path, edgelist_path, output_csv_path)\n",
+    "df = process_edgelist_data(y_train_path, edgelist_path, output_csv_path)\n",
     "\n",
     "df.head(5)"
    ]
