authors text finish

--- a/authors_feature_extract.ipynb
+++ b/authors_feature_extract.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from unidecode import unidecode\n"
+    "from unidecode import unidecode"
    ]
   },
   {
@@ -17,15 +16,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define processing funtion\n",
+    "- Reads input data files:\n",
+    "  - `y_train.txt` containing paper IDs and their associated classes.\n",
+    "  - `authors.txt` containing paper ID pair associated with author names. <br><br>\n",
     "\n",
-    "- **Reads and parses** the input files: 'authors.txt' and a file with class labels for each paper\n",
-    "- **Cleans and processes** author names, removing accents and special characters\n",
-    "- **Creates a dictionary** of authors and their associated classes\n",
-    "- **Constructs a DataFrame** with columns for 'paper_id', 'authors', 'classes', class counts, and class weights\n",
-    "- **Calculates** the class counts and class weights for each paper's authors\n",
-    "- **Saves** the resulting DataFrame to a CSV file\n",
-    "- **Returns** the DataFrame for further use or analysis"
+    "- Processes the input data to create a dictionary (`authors_dict`) with the following structure:\n",
+    "  - Key: paper ID\n",
+    "  - Value: authors names<br><br>\n",
+    "\n",
+    "- Processes the `authors_dict` \n",
+    "  - Clean the author names (remove accents, special characcters, digits)\n",
+    "  - Add the cleaned authors to the `processed_authors` dictionary<br><br>\n",
+    "\n",
+    "- Create the `authors_class_dict` and `paper_classes`\n",
+    "  - Read the *y_train_path* file\n",
+    "  - Extract *paper_id* and *class_label*\n",
+    "  - Populate `paper_classes` with *paper_id* and *class_label*\n",
+    "  - Update `authors_class_dict` with *author* and *class_label*<br><br>\n",
+    "\n",
+    "- Update the `authors_dict` with class information\n",
+    "  - Create an `updated_authors_dict`\n",
+    "  - Iterate through `processed_authors`\n",
+    "  - Append *class_list* to each author in the `updated_authors_dict`<br><br>\n",
+    "\n",
+    "- Converts the `updated_authors_dict` dictionary to a pandas DataFrame.\n",
+    "\n",
+    "- Calculates the class counts and class weights for each paper's author and adds them as new columns to the DataFrame.\n",
+    "\n",
+    "- Saves the resulting DataFrame to a CSV file (`output_csv_path`)."
    ]
   },
   {
@@ -46,7 +64,7 @@
     "    with open(authors_path, \"r\") as file:\n",
     "        lines = file.readlines()\n",
     "\n",
-    "    # Create the authors_dict from the lines\n",
+    "    # Create the authors_dict\n",
     "    authors_dict = {int(line.split('||')[0]): line.split('||')[1].strip() for line in lines}\n",
     "\n",
     "    # Process the authors_dict\n",
@@ -311,15 +329,6 @@
     "df = process_authors_data(y_train_path, authors_path, output_csv_path)\n",
     "\n",
     "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Write me a short description in bullets what does this funtion do"
    ]
   }
  ],
