--- a/authors_feature_extract.ipynb
+++ b/authors_feature_extract.ipynb
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Define processing funtion\n",
+    "\n",
     "- Reads input data files:\n",
     "  - `y_train.txt` containing paper IDs and their associated classes.\n",
     "  - `authors.txt` containing paper ID pair associated with author names. <br><br>\n",
@@ -150,6 +152,14 @@
     "    # Save the DataFrame to a CSV file\n",
     "    df.to_csv(output_csv_path, index=False)\n",
     "    return df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results"
    ]
   },
   {
